fix whitespace and missing semi colons

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -534,16 +534,16 @@ overflow-x: hidden;
     align-items: center;
     flex-direction: column;
     background-color: rgba(40, 40, 40, 0.75);
-     transition: background-color .3s ease-in-out;
-   -moz-transition: background-color .3s ease-in-out;
-   -webkit-transition: background-color .3usis ease-in-out;
+    transition: background-color .3s ease-in-out;
+    -moz-transition: background-color .3s ease-in-out;
+    -webkit-transition: background-color .3usis ease-in-out;
 }
 
 .more-work__title:hover {
     background-color: rgba(40, 40, 40, 0.2);
     transition: background-color .3s ease-in-out;
-   -moz-transition: background-color .3s ease-in-out;
-   -webkit-transition: background-color .3s ease-in-out;
+    -moz-transition: background-color .3s ease-in-out;
+    -webkit-transition: background-color .3s ease-in-out;
 }
 
 .more-work {
@@ -558,13 +558,13 @@ overflow-x: hidden;
 
 
 .more-work-image {
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-position: center;
-  width: 103%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center;
+    width: 103%;
     color: white;
 }
 
@@ -577,7 +577,7 @@ overflow-x: hidden;
 }
 
 .more-work-link{
- text-decoration:none;
+    text-decoration:none;
 }
 
 .fade-next-project {
@@ -589,11 +589,11 @@ overflow-x: hidden;
 
 .fade-next-project:hover {
       opacity: 0.4;
-      }
+}
 
 .grow {
   -moz-transition: all .3s;
-  -webkit-transition: all cubic-bezier(.175,.885,.32,1.275) 300ms;    
+  -webkit-transition: all cubic-bezier(.175,.885,.32,1.275) 300ms;
   background-position: center center;
   background-size: 103%;
 }
@@ -615,20 +615,19 @@ overflow-x: hidden;
     font-size:12px;
 }
 
-#footer .container{
+#footer .container {
 /*multipage only*/
     padding:0;
 }
 
 
-.footerText{
+.footerText {
     color:white;
     padding:10px 40px;
 }
 
-.footerText p{
-    color: #a5a5a5
-    
+.footerText p {
+    color: #a5a5a5;
 }
 
 
@@ -693,10 +692,7 @@ overflow-x: hidden;
 .footerSocialIcons {
     list-style: none;
     align-content:center;
-    font-size: .9em
-    
-
-
+    font-size: .9em;
 }
 
 .footerSocialIcons li {
@@ -705,16 +701,13 @@ overflow-x: hidden;
 
 }
 
-.footerSocialIcons li a{
+.footerSocialIcons li a {
     color: #252729;
 
 
 }
 .footerSocialIcons li a:hover{
     color: #606060;
-
-}
-
 }
 
 @media (max-width: 1280px) {
